--- a/package.json
+++ b/package.json
@@ -13,8 +13,22 @@
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "antd": "^5.12.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "sass": "^1.69.5",
+    "sort-by": "^1.2.0",
+    "url": "^0.11.3"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint",
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
