--- a/package.json
+++ b/package.json
@@ -13,16 +13,26 @@
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-router": "^5.1.20",
     "antd": "^5.12.1",
+    "date-fns": "^2.30.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
+    "react-markdown": "^9.0.1",
+    "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "sass": "^1.69.5",
     "sort-by": "^1.2.0",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "vite-tsconfig-paths": "^4.2.2",
+    "yup": "^1.3.2",
+    "zod": "^3.22.4"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
